# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

# Build system information and other project-specific configuration below.

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
dependencies = [
  "click>=8.0.0",
  "colorlog>=6.7.0",
  "maus>=0.5.2",
  "openpyxl>=3.1.1",
  "pandas>=1.5.3",
  "python-docx>=1.0.0",
  "pytz>=2022.7.1",
  "pydantic>=2.6.0",
  "tomlkit>=0.11.6",
  "xlsxwriter>=3.0.8",
]
name = "kohlrahbi"
description = "Tool to generate machine readable files from AHB documents"
license = { text = "GPL" }
requires-python = ">=3.11"
authors = [{ name = "Kevin Krechan", email = "kevin.krechan@hochfrequenz.de" }]
keywords = ["automation", "ahb", "bdew", "edi@energy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = ["readme", "version"]

[project.scripts]
kohlrahbi = "kohlrahbi:cli"


[project.urls]
Changelog = "https://github.com/Hochfrequenz/kohlrahbi/releases"
Homepage = "https://github.com/Hochfrequenz/kohlrahbi"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/kohlrahbi/version.py"

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
good-names = ["i", "j", "k", "ex", "Run", "_", "df"]

[tool.pytest.ini_options]
pythonpath = ["."]
