# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

# Build system information and other project-specific configuration below.

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
dependencies = [
  "click>=8.1.7",
  "colorlog>=6.9.0",
  "more_itertools>=10.5.0",
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "python-docx>=1.1.2",
  "pytz>=2024.2",
  "pydantic>=2.9.2",
  "tomlkit>=0.13.2",
  "xlsxwriter>=3.2.0",
  "efoli>=1.4.0",
  "edi_energy_scraper>=2.0.0"
]

name = "kohlrahbi"
description = "Tool to generate machine readable files from AHB documents"
license = { text = "GPL" }
requires-python = ">=3.11"
authors = [{ name = "Kevin Krechan", email = "kevin.krechan@hochfrequenz.de" }]
keywords = ["automation", "ahb", "bdew", "edi@energy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["readme", "version"]

[project.scripts]
kohlrahbi = "kohlrahbi:cli"

[project.optional-dependencies]
sqlmodels = [
  "sqlmodel>=0.0.22",
  "sqlalchemy[mypy]>=2.0.37"
]
dev = [
  "kohlrahbi[sqlmodels]",
  "kohlrahbi[test]",
  "kohlrahbi[lint]",
  "kohlrahbi[typecheck]",
  "kohlrahbi[formatting]",
]
lint = ["pylint==3.3.3", "pylint-pydantic==0.3.5"]
test = [
  "kohlrahbi[sqlmodels]",
  "coverage==7.6.10",
  "dictdiffer==0.9.0",
  "freezegun==1.5.1",
  "pytest-datafiles==3.0.0",
  "pytest==8.3.4",
  "syrupy==4.8.1",
]
typecheck = [
  "kohlrahbi[sqlmodels]",
  "mypy==1.11.2",
  "networkx-stubs==0.0.1",
  "pandas-stubs==2.2.3.241126",
  "pytest==8.3.4",
  "types-freezegun==1.1.10",
  "types-requests==2.32.0.20241016 ",
]
spell_check = ["codespell==2.4.0"]
coverage = ["coverage==7.6.10"]
formatting = ["black==25.1.0", "isort==5.13.2"]
test_packaging = ["build==1.2.2.post1", "twine==6.1.0"]

[project.urls]
Changelog = "https://github.com/Hochfrequenz/kohlrahbi/releases"
Homepage = "https://github.com/Hochfrequenz/kohlrahbi"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/kohlrahbi/version.py"

[tool.hatch.build.targets.sdist]
exclude = ["/unittests", "/edi_energy_mirror"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
good-names = ["i", "j", "k", "ex", "Run", "_", "df"]
load-plugins = "pylint_pydantic"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["snapshot: mark a test as a snapshot test"]

[tool.codespell]
skip = 'src/kohlrahbi.egg-info'
