# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

# Build system information and other project-specific configuration below.

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dependencies = [
  "click>=8.1.7",
  "colorlog>=6.9.0",
  "edi_energy_scraper>=2.0.0",
  "efoli>=2.2.0",
  "more_itertools>=10.5.0",
  "openpyxl>=3.1.5",
  "pandas>=3.0.2",
  "pydantic>=2.9.2",
  "python-docx>=1.1.2",
  "pytz>=2024.2",
  "tomlkit>=0.13.2",
  "xlsxwriter>=3.2.0",
  "httpx==0.28.1",
  "pdfplumber==0.11.5",
  "beautifulsoup4==4.13.3",
]

name = "kohlrahbi"
description = "Tool to generate machine readable files from AHB documents"
license = { text = "GPL" }
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Kevin Krechan", email = "kevin.krechan@hochfrequenz.de" }]
keywords = ["automation", "ahb", "bdew", "edi@energy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[project.scripts]
kohlrahbi = "kohlrahbi:cli"

[project.optional-dependencies]
sqlmodels = ["sqlmodel>=0.0.22", "sqlalchemy[mypy]>=2.0.37"]

[dependency-groups]
test = [
  "coverage==7.6.12",
  "dictdiffer==0.9.0",
  "freezegun==1.5.1",
  "pytest-datafiles==3.0.0",
  "pytest==8.3.4",
  "syrupy==4.8.2",
  "sqlmodel>=0.0.22",
  "sqlalchemy[mypy]>=2.0.37",
]
lint = ["pylint==3.3.4", "pylint-pydantic==0.3.5"]
typecheck = [
  "mypy==1.11.2",
  "networkx-stubs==0.0.1",
  "pandas-stubs==2.2.3.241126",
  "pytest==8.3.4",
  "types-freezegun==1.1.10",
  "types-requests==2.32.0.20241016",
  "sqlmodel>=0.0.22",
  "sqlalchemy[mypy]>=2.0.37",
]
spelling = ["codespell==2.4.1"]
formatting = ["black==25.1.0", "isort==6.0.0"]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
  { include-group = "typecheck" },
  { include-group = "formatting" },
  { include-group = "spelling" },
]

[project.urls]
Changelog = "https://github.com/Hochfrequenz/kohlrahbi/releases"
Homepage = "https://github.com/Hochfrequenz/kohlrahbi"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/kohlrahbi/version.py"

[tool.hatch.build.targets.sdist]
exclude = ["/unittests", "/edi_energy_mirror"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.black]
line-length = 120
extend-exclude = "edi_energy_mirror"

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
good-names = ["i", "j", "k", "ex", "Run", "_", "df"]
load-plugins = "pylint_pydantic"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["snapshot: mark a test as a snapshot test"]

[tool.codespell]
skip = 'src/kohlrahbi.egg-info'
