[metadata]
author = Kevin Krechan
author_email = kevin.krechan@hochfrequenz.de
description = "Tool to generate machine readable files from AHB documents"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/Hochfrequenz/AHBExtractor
project_urls =
    Documentation = https://github.com/Hochfrequenz/AHBExtractor
    Code = https://github.com/Hochfrequenz/AHBExtractor
    Bug tracker = https://github.com/Hochfrequenz/AHBExtractor/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
license = mit
platforms = any

[options]
package_dir =
    = src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.10
install_requires =
    attrs
    openpyxl
    pandas
    python-docx
    XlsxWriter


[options.packages.find]
where = src
exclude =
    unittests

[options.package_data]
* = py.typed
